[gd_scene load_steps=31 format=3 uid="uid://hmurq7k0cm7y"]

[ext_resource type="Script" path="res://scences/current_views/battle/battle.gd" id="1_aq6po"]
[ext_resource type="Texture2D" uid="uid://j16iwp255gqv" path="res://assets/backgrounds/sand.png" id="1_rkqh7"]
[ext_resource type="PackedScene" uid="uid://dkpw6tsw7i7y0" path="res://scences/enemy/enemy.tscn" id="2_2gdxf"]
[ext_resource type="Script" path="res://scences/ui/battle/hand.gd" id="2_jt18g"]
[ext_resource type="PackedScene" uid="uid://d4ejck6c4qtqh" path="res://scences/ui/player_card/card_target_selector/card_target_selector.tscn" id="3_eiww7"]
[ext_resource type="PackedScene" uid="uid://bgoevwf8o3b04" path="res://scences/player/player.tscn" id="3_qq8kc"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://assets/sfx/8_bit_iced_village_lofi.mp3" id="3_up5un"]
[ext_resource type="Resource" uid="uid://ctbo0h42ed02e" path="res://characters/machine/machine.tres" id="4_jn668"]
[ext_resource type="Script" path="res://scences/enemy/enemy_handler.gd" id="5_7dbco"]
[ext_resource type="Script" path="res://scences/enemy/enemy_hand.gd" id="5_l031e"]
[ext_resource type="Resource" uid="uid://cw32ms5tgh2o3" path="res://enemies/bat/bat_ai.tres" id="6_ay38m"]
[ext_resource type="Script" path="res://scences/ui/battle/battle_ui.gd" id="7_pjj3c"]
[ext_resource type="Resource" uid="uid://c22fqvciaix8w" path="res://enemies/bat/bat_stats.tres" id="7_ulgmk"]
[ext_resource type="Script" path="res://scences/player/player_handeler.gd" id="8_yhxx8"]
[ext_resource type="PackedScene" uid="uid://bijq7mf8h0j85" path="res://scences/ui/settings/tooltip.tscn" id="12_rl0gg"]
[ext_resource type="Script" path="res://scences/summon/summon_handler.gd" id="13_7kmvg"]
[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/misc/main_theme.tres" id="13_j1van"]
[ext_resource type="PackedScene" uid="uid://dp685le4xdy6x" path="res://scences/summon/summon.tscn" id="14_h8sp4"]
[ext_resource type="Resource" uid="uid://b5t2dhytk2fg2" path="res://summons/rover/rover.tres" id="15_4iapu"]
[ext_resource type="Script" path="res://scences/ui/battle/red_flash.gd" id="15_ym3km"]
[ext_resource type="PackedScene" uid="uid://ummt03ux4buj" path="res://scences/ui/battle/defeat_panel.tscn" id="17_lrr78"]
[ext_resource type="PackedScene" uid="uid://cmrvm435qcold" path="res://scences/ui/player_card/card_pile/card_pile_button.tscn" id="21_4q4vq"]
[ext_resource type="Texture2D" uid="uid://d048113h6rjjh" path="res://assets/ui/cards/exhaust.png" id="21_6q5ah"]
[ext_resource type="StyleBox" uid="uid://r3x12h2yjbk0" path="res://assets/styleboxes/hover_stylebox.tres" id="21_iybba"]
[ext_resource type="Script" path="res://scences/ui/battle/memory_ui.gd" id="22_5ta04"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://assets/styleboxes/default_stylebox.tres" id="22_fnuxb"]
[ext_resource type="Texture2D" uid="uid://fb0t0b1qg1ms" path="res://assets/ui/cards/discard.png" id="22_p100a"]
[ext_resource type="PackedScene" uid="uid://hqt3nv2gge3l" path="res://scences/ui/player_card/card_pile/card_pile_view.tscn" id="25_e6li0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evep0"]
size = Vector2(640, 230)

[sub_resource type="LabelSettings" id="LabelSettings_yvsaa"]
font_size = 8

[node name="Battle" type="Node2D"]
script = ExtResource("1_aq6po")
music = ExtResource("3_up5un")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.737193, 0.737193, 0.737193, 1)
scale = Vector2(1.915, 1.915)
texture = ExtResource("1_rkqh7")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(320, 115)
shape = SubResource("RectangleShape2D_evep0")
debug_color = Color(0, 0.6, 0.701961, 0.235294)
metadata/_edit_lock_ = true

[node name="CardTargetSelector" parent="." instance=ExtResource("3_eiww7")]
z_index = 1

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("5_7dbco")

[node name="EnemyHand" type="HBoxContainer" parent="EnemyHandler"]
unique_name_in_owner = true
offset_left = 158.0
offset_top = 12.0
offset_right = 626.0
offset_bottom = 72.0
script = ExtResource("5_l031e")

[node name="SpiderEnemy" parent="EnemyHandler" instance=ExtResource("2_2gdxf")]
position = Vector2(372, 145)

[node name="SpiderEnemy2" parent="EnemyHandler" instance=ExtResource("2_2gdxf")]
position = Vector2(489, 150)

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_2gdxf")]
position = Vector2(585, 145)
ai = ExtResource("6_ay38m")
stats = ExtResource("7_ulgmk")

[node name="Player" parent="." node_paths=PackedStringArray("handler") instance=ExtResource("3_qq8kc")]
position = Vector2(204, 198)
stats = ExtResource("4_jn668")
handler = NodePath("../PlayerHandeler")

[node name="SummonHandler" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, 0)
script = ExtResource("13_7kmvg")

[node name="Summon" parent="SummonHandler" instance=ExtResource("14_h8sp4")]
position = Vector2(270, 165)
stats = ExtResource("15_4iapu")

[node name="PlayerHandeler" type="Node" parent="." node_paths=PackedStringArray("player", "hand")]
script = ExtResource("8_yhxx8")
player = NodePath("../Player")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_pjj3c")

[node name="TurnCounter" type="Label" parent="BattleUI"]
unique_name_in_owner = true
offset_left = 82.0
offset_top = 15.0
offset_right = 110.0
offset_bottom = 24.0
scale = Vector2(2, 2)
text = "0"
label_settings = SubResource("LabelSettings_yvsaa")
horizontal_alignment = 2

[node name="Hand" type="HBoxContainer" parent="BattleUI" node_paths=PackedStringArray("player")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -111.0
offset_right = 291.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1
script = ExtResource("2_jt18g")
player = NodePath("../../Player")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_rl0gg")]
offset_left = -160.0
offset_top = 95.0
offset_right = 90.0
offset_bottom = 159.0

[node name="DefeatPanel" parent="BattleUI" instance=ExtResource("17_lrr78")]
visible = false
z_index = 2

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -47.0
offset_right = 99.0
offset_bottom = -14.0
grow_vertical = 0
theme = ExtResource("13_j1van")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = ExtResource("21_iybba")
theme_override_styles/normal = ExtResource("22_fnuxb")
disabled = true
text = "End turn"

[node name="MemoryUI" type="Panel" parent="BattleUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 103.0
offset_top = -47.0
offset_right = 137.0
offset_bottom = -14.0
grow_vertical = 0
theme = ExtResource("13_j1van")
script = ExtResource("22_5ta04")

[node name="ManaLabel" type="Label" parent="BattleUI/MemoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4/4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("21_4q4vq")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.0
offset_top = -82.0
offset_right = -183.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="RichTextLabel" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 7.0
offset_top = -13.0
offset_right = 17.0
offset_bottom = -1.0
bbcode_enabled = true
text = "9"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("21_4q4vq")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -82.0
offset_right = -215.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("22_p100a")
counter = NodePath("Counter")

[node name="Counter" type="RichTextLabel" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = 7.0
offset_top = -13.0
offset_right = 17.0
offset_bottom = -1.0
bbcode_enabled = true
text = "9"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ExhaustPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("21_4q4vq")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -271.0
offset_top = -82.0
offset_right = -247.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("21_6q5ah")
counter = NodePath("Counter")

[node name="Counter" type="RichTextLabel" parent="BattleUI/ExhaustPileButton"]
layout_mode = 0
offset_left = 7.0
offset_top = -13.0
offset_right = 17.0
offset_bottom = -1.0
bbcode_enabled = true
text = "9"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CachePileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("21_4q4vq")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -303.0
offset_top = -82.0
offset_right = -279.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="RichTextLabel" parent="BattleUI/CachePileButton"]
layout_mode = 0
offset_left = 7.0
offset_top = -13.0
offset_right = 17.0
offset_bottom = -1.0
bbcode_enabled = true
text = "9"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_ym3km")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.913725, 0, 0.2, 0)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.2
one_shot = true

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("25_e6li0")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("25_e6li0")]
unique_name_in_owner = true
visible = false

[node name="ExhaustPileView" parent="CardPileViews" instance=ExtResource("25_e6li0")]
unique_name_in_owner = true
visible = false

[node name="CachePileView" parent="CardPileViews" instance=ExtResource("25_e6li0")]
unique_name_in_owner = true
visible = false

[node name="CustomPileView" parent="CardPileViews" instance=ExtResource("25_e6li0")]
unique_name_in_owner = true
visible = false

[connection signal="child_order_changed" from="EnemyHandler" to="." method="_on_enemy_handler_child_order_changed"]
[connection signal="mouse_entered" from="BattleUI/MemoryUI" to="BattleUI/MemoryUI" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BattleUI/MemoryUI" to="BattleUI/MemoryUI" method="_on_mouse_exited"]
